Figured out collision detection, and fixed the invisible wall glitch by creating an input handler All thats left for collision detection is making sure the player can't travel down walls vertically

--- a/style.css
+++ b/style.css
@@ -26,6 +26,6 @@ body {
 
 canvas {
     border: 1px solid rgba(0, 0, 0);
-    background-color: white;
+    background-color: rgb(0, 0, 0);
     margin: auto;
 }
